WsTable组件简单版实现
